tests/sksl/errors/golden/GrCannotReturnWithSkOutColor.cpp
### Compilation failed:

error: 3: expected function to return 'half4'
1 error
